--- a/network_status_and_map.html
+++ b/network_status_and_map.html
@@ -44,11 +44,11 @@
         <li class="menu-item">
           <a href="data_access">Data and Network</a>
           <ul class="submenu">
-            <li><a href="network_status_and_map.html">Network Status and Map</a></li>
+            <li><a href="network_status_and_map.html">Network status and map</a></li>
             <li><a href="data_access.html">Data access</a></li>
             <li><a href="qc.html">Quality control</a></li>
             <li><a href="share_data.html">Share your data</a></li>
-            <li><a href="https://www.ocean-ops.org/board?t=DBCP&qptf=1" target="_blank">Platform</a></li>
+            <li><a href="https://www.ocean-ops.org/board?t=DBCP&qptf=1" target="_blank">OceanOPS dashboard</a></li>
           </ul>
         </li>
         <li class="menu-item">
@@ -87,7 +87,6 @@
   
   
   <!-- Hero Section -->
-  <!-- <section class="hero" style="background-image: url('https://images.freeimages.com/images/large-previews/510/ocean-waves-1341653.jpg?fmt=webp&h=350')"> -->
   <section 
     class="hero" 
     style="background-image: url('figures/headbanner04.jpg'); 
@@ -97,7 +96,7 @@
  
     <div class="container">
     <div class="hero-content">
-    <h1>Mapping the Seas in Real Time – The Global Buoy Network at Work </h1>
+    <h1>Mapping the seas in real time – The global buoy network at work </h1>
     
       
       <div class="hero-logos">
