--- a/newsletter.html
+++ b/newsletter.html
@@ -38,7 +38,7 @@
         <li class="menu-item">
           <a href="data_access">Data and Network</a>
           <ul class="submenu">
-            <li><a href="network_status_and_map.html">Network Status and Map</a></li>
+            <li><a href="network_status_and_map.html">Network status and map</a></li>
             <li><a href="data_access.html">Data access</a></li>
             <li><a href="qc.html">Quality control</a></li>
             <li><a href="share_data.html">Share your data</a></li>
@@ -183,33 +183,33 @@
     <div class="content" >
      <div class="fourparts-one";>
         <figure>
-          <img src="figures/axys_1.jpg" alt="related articles"/>
-          <a href="#" target="_blank">
-            <p style="text-align: center; ">Lorem ipsum dolor sit amet</p>
+          <img src="figures/thumbnail_sessions.jpg" alt="related articles"/>
+          <a href="sessions.html" target="_blank">
+            <p style="text-align: center; ">DBCP sessions</p>
           </a>
         </figure>
      </div>
      <div class="fourparts-two">
         <figure>
-          <img src="figures/axys_2.jpg" alt="related articles"/>
-          <a href="#" target="_blank">
-            <p style="text-align: center; ">Lorem ipsum dolor sit amet</p>
+          <img src="figures/thumbnail_about.jpg" alt="related articles"/>
+          <a href="about.html" target="_blank">
+            <p style="text-align: center; ">About DBCP</p>
           </a>
         </figure>
      </div>
      <div class="fourparts-three">
         <figure>
-          <img src="figures/axys_3.jpg" alt="related articles"/>
-          <a href="#" target="_blank">
-            <p style="text-align: center; ">Lorem ipsum dolor sit amet</p>
+          <img src="figures/thumbnail_contact_us.jpg" alt="related articles"/>
+          <a href="contact_us.html" target="_blank">
+            <p style="text-align: center; ">Contact us</p>
           </a>
         </figure>
      </div>
      <div class="fourparts-four">
         <figure>
-          <img src="figures/axys_4.jpg" alt="related articles"/>
-          <a href="#" target="_blank">
-            <p style="text-align: center; ">Lorem ipsum dolor sit amet</p>
+          <img src="figures/thumbnail_network_status_and_map.jpg" alt="related articles"/>
+          <a href="network_status_and_map.html" target="_blank">
+            <p style="text-align: center; ">DBCP network status and map</p>
           </a>
         </figure>
     </div>
