--- a/platform.html
+++ b/platform.html
@@ -38,11 +38,11 @@
         <li class="menu-item">
           <a href="data_access">Data and Network</a>
           <ul class="submenu">
-            <li><a href="network_status_and_map.html">Network Status and Map</a></li>
+            <li><a href="network_status_and_map.html">Network status and map</a></li>
             <li><a href="data_access.html">Data access</a></li>
             <li><a href="qc.html">Quality control</a></li>
             <li><a href="share_data.html">Share your data</a></li>
-            <li><a href="https://www.ocean-ops.org/board?t=DBCP&qptf=1" target="_blank">Platform</a></li>
+            <li><a href="https://www.ocean-ops.org/board?t=DBCP&qptf=1" target="_blank">OceanOPS dashboard</a></li>
           </ul>
         </li>
         <li class="menu-item">
@@ -383,7 +383,7 @@ The DBCP has now mostly standardised on the use of SVP and SVP buoys, and their 
      <div class="fourparts-four">
         <figure>
           <img src="figures/thumbnail_share_data.jpg" alt="related articles"/>
-          <a href="share_data" target="_blank">
+          <a href="share_data.html" target="_blank">
             <p style="text-align: center; ">Sharing your data</p>
           </a>
         </figure>
