--- a/share_data.html
+++ b/share_data.html
@@ -38,11 +38,11 @@
         <li class="menu-item">
           <a href="data_access">Data and Network</a>
           <ul class="submenu">
-            <li><a href="network_status_and_map.html">Network Status and Map</a></li>
+            <li><a href="network_status_and_map.html">Network status and map</a></li>
             <li><a href="data_access.html">Data access</a></li>
             <li><a href="qc.html">Quality control</a></li>
             <li><a href="share_data.html">Share your data</a></li>
-            <li><a href="https://www.ocean-ops.org/board?t=DBCP&qptf=1" target="_blank">Platform</a></li>
+            <li><a href="https://www.ocean-ops.org/board?t=DBCP&qptf=1" target="_blank">OceanOPS dashboard</a></li>
           </ul>
         </li>
         <li class="menu-item">
@@ -89,7 +89,7 @@
  
     <div class="container">
     <div class="hero-content">
-    <h1>Delivering Ocean Insights – Preserving Data for the Future</h1>
+    <h1>Delivering ocean insights – Preserving data for the future</h1>
     
       
       <div class="hero-logos">
@@ -142,74 +142,82 @@
 
 <section class="article-section">
   <div class="container">
-
     <div class="content" >
       <!-- Left Column: Image -->
       <div class="left-image">
         <figure>
-          <a href="https://goosocean.org/event/3841" target="_blank"><img src="figures/data_sharing01.jpg" alt="data_sharing01" /></a>
+          <img src="figures/data_sharing01.jpg" alt="data_sharing01" />
         </figure>
        </div>
       <!-- Right Column: Text -->
       <div class="right-text">
         <h3 style="text-align: left">The Transition from GTS to WIS 2.0</h3>
         <p style="text-align: left">
-          The Global Telecommunication System (GTS) has been the backbone of meteorological data exchange for decades. However, with advancements in technology and the need for more efficient data dissemination, WIS 2.0 is set to replace GTS. The transition is underway, and data sharing is now encouraged through WIS 2.0. For more information on GTS and its transition timeline, please visit the <a href="https://community.wmo.int/en/activity-areas/wis/WIS2-overview" target="_blank">WMO's official page on GTS</a>.
+          For decades, the Global Telecommunication System (GTS) has served as the cornerstone of meteorological data exchange, enabling the World Meteorological 
+Organization (WMO) and its members to share critical weather, climate, and environmental data through dedicated private links. However, rapid 
+advancements in digital technology, coupled with the growing demand for real-time, accessible, and voluminous data across diverse WMO 
+disciplines, have necessitated a modernized approach.
         </p>
-        <p style="text-align: right">
-          <a href="https://goosocean.org/event/4051" target="_blank">
-            <button class="button-orange">
-              <i>Explore</i>
-            </button>
-          </a>
-        </p>
-      </div>
-
-    <div class="content" >
-      <!-- Left Column: Image -->
-      <div class="left-image">
-        <figure>
-          <a href="https://goosocean.org/event/3841" target="_blank"><img src="figures/data_sharing02.jpg" alt="data_sharing02" /></a>
-        </figure>
-       </div>
-      <!-- Right Column: Text -->
-      <div class="right-text">
-        <h3 style="text-align: left">Near-Real-Time and Archived Data Access</h3>
         <p style="text-align: left">
-          Canada's Integrated Science Data Management (ISDM) center archive buoy data on behalf of the Data Buoy Cooperation Panel (DBCP) and the Global Ocean Observing System (GOOS), making it available for historical analysis typically within two months of observation. Similarly, the Coriolis Data Center offers comprehensive access to in-situ oceanographic data, including both real-time and delayed-mode datasets, facilitating a wide range of ocean research and operational activities. These archived datasets are invaluable for long-term climate monitoring, environmental assessments, and the validation of oceanographic models, ensuring a robust understanding of ocean dynamics over time.
+          The WMO Information System 2.0 (WIS 2.0) is poised to replace the GTS, leveraging the public internet and a publish-subscribe model powered by the 
+MQTT protocol to deliver efficient, cost-effective, and inclusive data sharing. Unlike the GTS, which relies on specialized infrastructure, 
+WIS 2.0 enables data publishers to operate WIS2 Nodes, allowing users to subscribe to specific data topics and access real-time updates via 
+HTTP(S) downloads, supported by Global Services such as Global Brokers, Caches, and Discovery Catalogues. 
+        </p>
+        <p style="text-align: left">
+          This transition, approved by the Commission for Observation, Infrastructure and Information Systems (INFCOM) in October 2022, is well underway, 
+with a pilot phase in 2023, a pre-operational phase in 2024, and full operational status targeted for 2025, after which WMO Members are 
+required to migrate. The WMO’s “WIS2 in a box” software further democratizes participation, particularly for Least Developed Countries (LDCs) 
+and Small Island Developing States (SIDS), ensuring no member is left behind. For detailed insights into the GTS and the structured timeline for 
+this transformative shift, visit the <a href="https://community.wmo.int/en/activity-areas/wis/WIS2-overview" target="_blank"> WMO’s WIS2.0 page 
+overview</a>.
+        </p>
+        <p style="text-align: left">
         </p>
         <p style="text-align: right">
-          <a href="https://goosocean.org/event/4051" target="_blank">
+          <a href="https://community.wmo.int/en/activity-areas/wis/WIS2-overview" target="_blank">
             <button class="button-orange">
               <i>Explore</i>
             </button>
           </a>
         </p>
       </div>
-
-    <div class="content" >
-        <h3 style="text-align: left">Assistance for Data Providers</h3>
-          <p style="text-align: left; ">
-          The DBCP Task Team on Data Management are available to support data buoy operators and data centers in sharing their data through WIS 2.0. This assistance ensures that data providers can effectively contribute to the global data pool, enhancing the overall quality and availability of meteorological and oceanographic information.
-          </p>
-    </div>
-
     </div>
   </div>
 </section>
 
 
+<section class="article-section">
+  <div class="container">
+
+        <h3 style="text-align: left">Near-Real-Time and Archived Data Access</h3>
+        <p style="text-align: left">
+          Canada's Integrated Science Data Management (ISDM) center archive buoy data on behalf of the Data Buoy Cooperation Panel (DBCP) and the 
+Global Ocean Observing System (GOOS), making it available for historical analysis typically within two months of observation. Similarly, the 
+Coriolis Data Center offers comprehensive access to in-situ oceanographic data, including both real-time and delayed-mode datasets, 
+facilitating a wide range of ocean research and operational activities. These archived datasets are invaluable for long-term climate monitoring, 
+environmental assessments, and the validation of oceanographic models, ensuring a robust understanding of ocean dynamics over time.
+        </p>
+        <h3 style="text-align: left">Assistance for Data Providers</h3>
+        <p style="text-align: left; ">
+          The DBCP Task Team on Data Management are available to support data buoy operators and data centers in sharing their data through WIS 2.0. 
+This assistance ensures that data providers can effectively contribute to the global data pool, enhancing the overall quality and 
+availability of meteorological and oceanographic information.
+        </p>
+
+  </div>
+</section>
 
 
-<!-- Article Section with one coloumn only -->
+<!-- Article Section with two coloumn -->
 
 <section class="article-section">
   <div class="container">
-    <div class="content" >
-    <div class="left-text">
+    <div class="content">
+     <div class="twoparts-left">
         <h3>Data Formats and Communication</h3>
         <p style="text-align: left">
-When considering data formats within WIS 2.0, there are two distinct stages in the data flow:
+          When considering data formats within WIS 2.0, there are two distinct stages in the data flow:
         <p style="text-align: left">
           <ul class="custom-bullets">
             <li style="text-align: left">Communication between the platform and the satellite (and data processing center): This involves transmitting raw data from the buoy to the satellite and subsequently to the data processing center.</li>
@@ -219,28 +227,8 @@ When considering data formats within WIS 2.0, there are two distinct stages in t
         <p style="text-align: left">
           By adopting WIS 2.0, data providers and users benefit from a more flexible, powerful, and easy-to-adapt system that supports the growing demand for high-volume, high-velocity, and diverse data across all Earth-system domains.
         </p>
-    </div>
-
-    <div class="right-column">
-        <h3>Further readings</h3>
-        <p style="text-align: left">
-          <ul class="custom-bullets">
-            <li style="text-align: left"><a href=""></a></li>
-            <li style="text-align: left"><a href=""></a></li>
-          </ul>
-        </p>
-    </div>
-
-    </div>
-  </div>
-</section>
-
-<!-- Article Section with one coloumn only -->
-
-<section class="article-section">
-  <div class="container">
-    <div class="content" >
-    <div class="left-text">
+     </div>
+     <div class="twoparts-right">
         <h3>Table-Driven Code Forms (TDCF) for Buoys</h3>
           <p style="text-align: left; ">
             <b>BUFR Templates for Buoy Data:</b>
@@ -270,19 +258,8 @@ When considering data formats within WIS 2.0, there are two distinct stages in t
           <p style="text-align: left; ">
             Transitioning to WIS 2.0 represents a significant advancement in global data sharing, offering enhanced efficiency, accessibility, and support for data providers and users alike.
           </p>
-    </div>
-
-    <div class="right-column">
-        <h3>Further readings</h3>
-        <p style="text-align: left">
-          <ul class="custom-bullets">
-            <li style="text-align: left"><a href=""></a></li>
-            <li style="text-align: left"><a href=""></a></li>
-          </ul>
-        </p>
-    </div>
-
-    </div>
+     </div>
+   </div>
   </div>
 </section>
 
@@ -301,33 +278,33 @@ When considering data formats within WIS 2.0, there are two distinct stages in t
     <div class="content" >
      <div class="fourparts-one";>
         <figure>
-          <img src="figures/axys_1.jpg" alt="related articles"/>
-          <a href="#" target="_blank">
-            <p style="text-align: center; ">Lorem ipsum dolor sit amet</p>
+          <img src="figures/thumbnail_qc.jpg" alt="related articles"/>
+          <a href="qc.html" target="_blank">
+            <p style="text-align: center; ">Quality control of data</p>
           </a>
         </figure>
      </div>
      <div class="fourparts-two">
         <figure>
-          <img src="figures/axys_2.jpg" alt="related articles"/>
-          <a href="#" target="_blank">
-            <p style="text-align: center; ">Lorem ipsum dolor sit amet</p>
+          <img src="figures/thumbnail_contact_us.jpg" alt="related articles"/>
+          <a href="contact_us.html" target="_blank">
+            <p style="text-align: center; ">Contact us</p>
           </a>
         </figure>
      </div>
      <div class="fourparts-three">
         <figure>
-          <img src="figures/axys_3.jpg" alt="related articles"/>
-          <a href="#" target="_blank">
-            <p style="text-align: center; ">Lorem ipsum dolor sit amet</p>
+          <img src="figures/thumbnail_network_status_and_map.jpg" alt="related articles"/>
+          <a href="etwork_status_and_map.html" target="_blank">
+            <p style="text-align: center; ">DBCP network</p>
           </a>
         </figure>
      </div>
      <div class="fourparts-four">
         <figure>
-          <img src="figures/axys_4.jpg" alt="related articles"/>
-          <a href="#" target="_blank">
-            <p style="text-align: center; ">Lorem ipsum dolor sit amet</p>
+          <img src="figures/thumbnail_data_uses.jpg" alt="related articles"/>
+          <a href="data_uses.html" target="_blank">
+            <p style="text-align: center; ">Uses of buoy data</p>
           </a>
         </figure>
     </div>
