--- a/barometer_upgrade.html
+++ b/barometer_upgrade.html
@@ -38,11 +38,11 @@
         <li class="menu-item">
           <a href="data_access">Data and Network</a>
           <ul class="submenu">
-            <li><a href="network_status_and_map.html">Network Status and Map</a></li>
+            <li><a href="network_status_and_map.html">Network status and map</a></li>
             <li><a href="data_access.html">Data access</a></li>
             <li><a href="qc.html">Quality control</a></li>
             <li><a href="share_data.html">Share your data</a></li>
-            <li><a href="https://www.ocean-ops.org/board?t=DBCP&qptf=1" target="_blank">Platform</a></li>
+            <li><a href="https://www.ocean-ops.org/board?t=DBCP&qptf=1" target="_blank">OceanOPS platform</a></li>
           </ul>
         </li>
         <li class="menu-item">
@@ -174,33 +174,33 @@
     <div class="content" >
      <div class="fourparts-one";>
         <figure>
-          <img src="figures/axys_1.jpg" alt="related articles"/>
-          <a href="#" target="_blank">
-            <p style="text-align: center;">Lorem ipsum dolor sit amet</p>
+          <img src="figures/thumbnail_platform.jpg" alt="related articles"/>
+          <a href="platform.html" target="_blank">
+            <p style="text-align: center;">DBCP subnetworks and platforms</p>
           </a>
         </figure>
      </div>
      <div class="fourparts-two">
         <figure>
-          <img src="figures/axys_2.jpg" alt="related articles"/>
-          <a href="#" target="_blank">
-            <p style="text-align: center; ">Lorem ipsum dolor sit amet</p>
+          <img src="figures/thumbnail_data_uses.jpg" alt="related articles"/>
+          <a href="data_uses.html" target="_blank">
+            <p style="text-align: center; ">Uses of buoy data</p>
           </a>
         </figure>
      </div>
      <div class="fourparts-three">
         <figure>
-          <img src="figures/axys_3.jpg" alt="related articles"/>
-          <a href="#" target="_blank">
-            <p style="text-align: center; ">Lorem ipsum dolor sit amet</p>
+          <img src="figures/thumbnail_deployment.jpg" alt="related articles"/>
+          <a href="deployment.html" target="_blank">
+            <p style="text-align: center; ">Buoy deployment</p>
           </a>
         </figure>
      </div>
      <div class="fourparts-four">
         <figure>
-          <img src="figures/axys_4.jpg" alt="related articles"/>
-          <a href="#" target="_blank">
-            <p style="text-align: center; ">Lorem ipsum dolor sit amet</p>
+          <img src="figures/thumbnail_anti_vandalism.jpg" alt="related articles"/>
+          <a href="anti_vandalism.html" target="_blank">
+            <p style="text-align: center; ">Addressing vandalism</p>
           </a>
         </figure>
     </div>
