--- a/deployment.html
+++ b/deployment.html
@@ -38,11 +38,11 @@
         <li class="menu-item">
           <a href="data_access">Data and Network</a>
           <ul class="submenu">
-            <li><a href="network_status_and_map.html">Network Status and Map</a></li>
+            <li><a href="network_status_and_map.html">Network status and map</a></li>
             <li><a href="data_access.html">Data access</a></li>
             <li><a href="qc.html">Quality control</a></li>
             <li><a href="share_data.html">Share your data</a></li>
-            <li><a href="https://www.ocean-ops.org/board?t=DBCP&qptf=1" target="_blank">Platform</a></li>
+            <li><a href="https://www.ocean-ops.org/board?t=DBCP&qptf=1" target="_blank">OceanOPS dashboard</a></li>
           </ul>
         </li>
         <li class="menu-item">
@@ -89,7 +89,7 @@
  
     <div class="container">
     <div class="hero-content">
-    <h1>Buoys Are the Lifelines of Ocean Science – Keep the Network Alive, One Deployment at a Time</h1>
+    <h1>Buoys are the lifelines of ocean science – Keep the network alive, one deployment at a time</h1>
     
       
       <div class="hero-logos">
@@ -160,33 +160,33 @@
     <div class="content" >
      <div class="fourparts-one";>
         <figure>
-          <img src="figures/axys_1.jpg" alt="related articles"/>
-          <a href="#" target="_blank">
-            <p style="text-align: center; ">Lorem ipsum dolor sit amet</p>
+          <img src="figures/thumbnail_barometer_upgrade.jpg" alt="related articles"/>
+          <a href="barometer_upgrade.html" target="_blank">
+            <p style="text-align: center; ">Barometer upgrade program</p>
           </a>
         </figure>
      </div>
      <div class="fourparts-two">
         <figure>
-          <img src="figures/axys_2.jpg" alt="related articles"/>
-          <a href="#" target="_blank">
-            <p style="text-align: center; ">Lorem ipsum dolor sit amet</p>
+          <img src="figures/thumbnail_platform.jpg" alt="related articles"/>
+          <a href="platform.html" target="_blank">
+            <p style="text-align: center; ">DBCP subnetworks and platforms</p>
           </a>
         </figure>
      </div>
      <div class="fourparts-three">
         <figure>
-          <img src="figures/axys_3.jpg" alt="related articles"/>
-          <a href="#" target="_blank">
-            <p style="text-align: center; ">Lorem ipsum dolor sit amet</p>
+          <img src="figures/thumbnail_data_uses.jpg" alt="related articles"/>
+          <a href="data_uses.html" target="_blank">
+            <p style="text-align: center; ">What buoy data is used</p>
           </a>
         </figure>
      </div>
      <div class="fourparts-four">
         <figure>
-          <img src="figures/axys_4.jpg" alt="related articles"/>
-          <a href="#" target="_blank">
-            <p style="text-align: center; ">Lorem ipsum dolor sit amet</p>
+          <img src="figures/thumbnail_network_status_and_map.jpg" alt="related articles"/>
+          <a href="network_status_and_map.html" target="_blank">
+            <p style="text-align: center; ">DBCP network status</p>
           </a>
         </figure>
     </div>
