--- a/index.html
+++ b/index.html
@@ -82,12 +82,13 @@
   <!-- Hero Section -->
   <section 
     class="hero" 
-    style="background-image: url('figures/headbanner10.jpg'); 
-           height: 500px; 
-           background-size: cover; 
+    style="background-image: url('figures/GOOS_banner_3.png'); 
+           height: 412px; 
+           background-size: cover;
+           background-repeat: no-repeat;
            background-position: center;">
- 
-    <div class="container">
+    
+    <!--div class="container">
     <div class="hero-content">
     <h1>The DBCP: Global cooperation for ocean observations, supporting climate resilience and sustainable ocean governance</h1>
     
@@ -104,7 +105,7 @@
         </a>
       </div>
      </div>
-    </div>
+    </div-->
   </section>
 
 
