--- a/index.html
+++ b/index.html
@@ -141,19 +141,19 @@
     <h2>Latest News</h2>
     <div class="news-grid">
       <div class="news-item">
-        <a href="https://www.ocean-ops.org/" target="_blank"> <!-- please change into the page of the article -->
+        <a href="#" target="_blank"> <!-- please change into the page of the article -->
         <h3>40th session of DBCP</h3> 
         </a>
         <p>The special session was commemorated the 40th anniversary of DBCP.</p>
       </div>
       <div class="news-item">
-        <a href="https://www.ocean-ops.org/" target="_blank"> <!-- please change into the page of the article -->
+        <a href="#" target="_blank"> <!-- please change into the page of the article -->
         <h3>DBCP Newsletter Relaunch</h3>
         </a>
         <p>After a pause in recent times, DBCP Newsletter will be ready to be sent to your inbox in March 2025.</p>
       </div>
       <div class="news-item">
-        <a href="https://www.ocean-ops.org/" target="_blank"> <!-- please change into the page of the article -->
+        <a href="#" target="_blank"> <!-- please change into the page of the article -->
         <h3>DBCP Workshop 2025</h3>
         </a>
         <p>The upcoming DBCP Capacity Development workshop in Hiderabad, India.</p>
@@ -217,7 +217,7 @@
       <ul class="footer-bottom-links">
         <li><a href="#">Accessibility statement</a></li>
         <li><a href="#">Sitemap</a></li>
-        <li><a href="#">Contact us</a></li>
+        <li><a href="contact_us.html">Contact us</a></li>
       </ul>
     </div>
   </footer>
