--- a/qc.html
+++ b/qc.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="DBCP, DBCP Secretariat Support at the WMO">
+  <meta name="description" content="data buoy cooperation panel (2025)">
+  <meta name="keywords" content="dbcp data buoy maps monthly status network jcomm goos gcos observations
+  gis google earth cooperation panel weather climate sea temperature air atmosphere pressure meteorology
+  climate ocean oceanography marine wind wave observing system ioc wmo unesco jcommops argo">
   <link rel="icon" type="image/png" href="figures/favicon.png">
-  <title>Buoy network ¦ Data Buoy Cooperation Panel</title>
+  <title>Buoy network | Data Buoy Cooperation Panel</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
   
 <!-- Header Section -->
@@ -83,14 +90,22 @@
   <!-- Hero Section -->
   <section 
     class="hero" 
-    style="background-image: url('figures/headbanner04.jpg'); 
-           height: 500px; 
+    style="background-image: url('figures/headbanner02.png'); 
+           height: 600px; 
            background-size: cover; 
+           background-repeat: no-repeat;
            background-position: center;">
  
     <div class="container">
     <div class="hero-content">
-    <h1>Quality matters: Monitoring and improving buoy data for a better ocean observation</h1>
+
+    <!-- Title should be divided into three lines. Each line max 40 characters (including space)-->
+    <!-- If no more than one or two lines, the second and third line should still be there with blank spaces.-->
+
+<!--    |------------This long only max-----------|       -->
+    <h1>Quality matters:</h1> 
+    <h1>Monitoring and improving buoy data </h1>
+    <h1>for a better ocean observation</h1>
     
       
       <div class="hero-logos">
@@ -248,16 +263,27 @@
       </div>
     </div>
     <div class="footer-bottom">
-      <p>© 2025 - DBCP</p>
-      <ul class="footer-bottom-links">
-        <li><a href="#">Accessibility statement</a></li>
-        <li><a href="#">Sitemap</a></li>
-        <li><a href="#">Contact us</a></li>
-      </ul>
+      <p>Copyright © 2025 Data Buoy Cooperation Panel. All Rights Reserved. Privacy Statement. Terms of Use.</p>
     </div>
   </footer>
 
   <script src="script.js"></script>
+
+<!-- **********************************-->
+<!-- *** Code for Google Analytics ***-->
+<!-- **********************************-->
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+var pageTracker = _gat._getTracker("UA-3558742-1");
+pageTracker._initData();
+pageTracker._trackPageview();
+</script>
+<!-- ********************************-->
+<!-- End of Code for Google Analytics-->
+<!-- ********************************-->
 
 </body>
 </html>
