--- a/about.html
+++ b/about.html
@@ -19,9 +19,9 @@
 <!-- Header Section -->
   <section class="header">
       <div class="container header-flex">
-          <a href="index.html">
+          <!--a href="index.html">
             <img src="https://www.ocean-ops.org/dbcp/graph_ref/dbcp_light_text_150.png" alt="DBCP Logo" class="header-logo">
-          </a>
+          </a-->
           <div class="header-content">
             <h1>DBCP</h1>
             <p>Data Buoy Cooperation Panel</p>
@@ -87,38 +87,31 @@
   
   
   <!-- Hero Section -->
-  <!-- <section class="hero" style="background-image: url('https://images.freeimages.com/images/large-previews/510/ocean-waves-1341653.jpg?fmt=webp&h=350')"> -->
-  <section 
-    class="hero" 
-    style="background-image: url('figures/headbanner01.png'); 
-           height: 600px; 
-           background-size: cover; 
-           background-repeat: no-repeat;
-           background-position: center;">
- 
-    <div class="container">
-    <div class="hero-content">
-
-    <!-- Title should be divided into three lines. Each line max 40 characters (including space)-->
-    <!-- If no more than one or two lines, the second and third line should still be there with blank spaces.-->
-
-<!--    |------------This long only max-----------|       -->
-    <h1>Strengthening ocean monitoring </h1> 
-    <h1>for a resilient and sustainable future</h1>
-    
-      
-      <div class="hero-logos">
-        <a href="https://www.wmo.int" target="_blank">
-          <img src="figures/wmologo2016_acronym_vertical_cmyk_en.png" alt="Logo 2" class="logo">
-        </a>
-        <a href="https://www.ioc.unesco.org/en" target="_blank">
-          <img src="figures/IOC-UNESCO-Logo_final.png" alt="Logo 3" class="logo">
-        </a>
-        <a href="https://goosocean.org" target="_blank">
-          <img src="figures/GOOS_logo_new.png" alt="Logo 4" class="logo">
+  <section class="hero">
+    <div class="hero-container" 
+      style="background-image: url('figures/headbanner01.png');">
+      <div class="hero-column-left">
+        <a href="index.html">
+          <img src="figures/favicon.png" alt="DBCP Logo" style="max-width: 120px;">
         </a>
       </div>
+      <div class="hero-column-mid">
+        <div class="hero-content">
+          <h1>Strengthening Ocean Monitoring for a Resilient and Sustainable Future</h1>
+        </div>
+        <div class="hero-logos">
+          <a href="https://www.wmo.int" target="_blank">
+            <img src="figures/wmologo2016_acronym_vertical_cmyk_en.png" alt="Logo 2" class="logo">
+          </a>
+          <a href="https://www.ioc.unesco.org/en" target="_blank">
+            <img src="figures/IOC-UNESCO-Logo_final.png" alt="Logo 3" class="logo" style="max-height: 70px;">
+          </a>
+          <a href="https://goosocean.org" target="_blank">
+            <img src="figures/GOOS_logo_new.png" alt="Logo 4" class="logo">
+          </a>
+        </div>
       </div>
+      <div class="hero-column-right"></div>
     </div>
   </section>
 
@@ -164,8 +157,10 @@
 
 <section class="article-section">
   <div class="container">
-      <div class="right-text">
-        <h3 style="text-align: left">Mission: Supporting Meteorologists and Oceanographers Worldwide</h3>
+    <div class="content">
+      <div class="twoparts-left">
+        <h2 style="text-align: left">Mission</h2>
+        <h3 style="text-align: left"><i>Supporting Meteorologists and Oceanographers Worldwide</i></h3>
         <p style="text-align: left">
           Oversees a network of over 1,250 drifting buoys and 400 moored buoys, the DBCP addresses the growing need for accurate and timely 
           atmospheric and oceanographic data. Its work supports better global forecasts of weather and ocean conditions while 
@@ -173,6 +168,14 @@
           including sea-surface temperature, surface current velocity, air temperature and wind speed and direction.
           These observations are critical for improving weather and ocean forecasts, scientific research, and operational models. 
         </p>
+      </div>
+      <div class="twoparts-right">
+        <figure>
+          <a href="https://goosocean.org/event/3833" target="_blank"><img src="figures/DBCP-39.png" alt="DBCP-39" /></a>
+        </figure>
+      </div>
+    </div>
+    <div class="content">
         <p style="text-align: left">
           One of the focus of the DBCP is identifying and addressing data needs. The panel reviews and evaluates evolving requirements for buoy data to meet the needs of the global community.
           It works on facilitating deployment and expanding the network, to coordinate and support deployment programs, ensuring the network meets operational and scientific demands.
@@ -188,8 +191,7 @@
             </button>
           </a>
         </p>
-      </div>
-
+    </div>
   </div>
 </section>
 
@@ -358,6 +360,7 @@
       </div>
       <!-- Right Column: Text -->
       <div class="right-text" >
+        <h2 style="text-align: left">Action Groups</h2>
         <p style="text-align: left">
           The Data Buoy Cooperation Panel (DBCP) Action Groups play a pivotal role in advancing global ocean observation by overseeing 
           independent buoy programs that deliver critical meteorological and oceanographic data. These groups, formally approved by 
