--- a/barometer_upgrade.html
+++ b/barometer_upgrade.html
@@ -12,9 +12,9 @@
 <!-- Header Section -->
   <section class="header">
       <div class="container header-flex">
-          <a href="index.html">
+          <!--a href="index.html">
             <img src="https://www.ocean-ops.org/dbcp/graph_ref/dbcp_light_text_150.png" alt="DBCP Logo" class="header-logo">
-          </a>
+          </a-->
           <div class="header-content">
             <h1>DBCP</h1>
             <p>Data Buoy Cooperation Panel</p>
@@ -80,30 +80,31 @@
   
   
   <!-- Hero Section -->
-  <section 
-    class="hero" 
-    style="background-image: url('figures/headbanner07.jpg'); 
-           height: 500px; 
-           background-size: cover; 
-           background-position: center;">
- 
-    <div class="container">
-    <div class="hero-content">
-    <h1>Observing valuable atmospheric data for better global forecast</h1>
-    
-      
-      <div class="hero-logos">
-        <a href="https://www.wmo.int" target="_blank">
-          <img src="figures/wmologo2016_acronym_vertical_cmyk_en.png" alt="Logo 2" class="logo">
-        </a>
-        <a href="https://www.ioc.unesco.org/en" target="_blank">
-          <img src="figures/IOC-UNESCO-Logo_final.png" alt="Logo 3" class="logo">
-        </a>
-        <a href="https://goosocean.org" target="_blank">
-          <img src="figures/GOOS_logo_new.png" alt="Logo 4" class="logo">
+  <section class="hero">
+    <div class="hero-container" 
+      style="background-image: url('figures/headbanner04.png');">
+      <div class="hero-column-left">
+        <a href="index.html">
+          <img src="figures/favicon.png" alt="DBCP Logo" style="max-width: 120px;">
         </a>
       </div>
+      <div class="hero-column-mid">
+        <div class="hero-content">
+          <h1>Observing Valuable Atmospheric Data for Better Global Forecast</h1>
+        </div>
+        <div class="hero-logos">
+          <a href="https://www.wmo.int" target="_blank">
+            <img src="figures/wmologo2016_acronym_vertical_cmyk_en.png" alt="Logo 2" class="logo">
+          </a>
+          <a href="https://www.ioc.unesco.org/en" target="_blank">
+            <img src="figures/IOC-UNESCO-Logo_final.png" alt="Logo 3" class="logo" style="max-height: 70px;">
+          </a>
+          <a href="https://goosocean.org" target="_blank">
+            <img src="figures/GOOS_logo_new.png" alt="Logo 4" class="logo">
+          </a>
+        </div>
       </div>
+      <div class="hero-column-right"></div>
     </div>
   </section>
 
