--- a/data_access.html
+++ b/data_access.html
@@ -18,9 +18,9 @@
 <!-- Header Section -->
   <section class="header">
       <div class="container header-flex">
-          <a href="index.html">
+          <!--a href="index.html">
             <img src="https://www.ocean-ops.org/dbcp/graph_ref/dbcp_light_text_150.png" alt="DBCP Logo" class="header-logo">
-          </a>
+          </a-->
           <div class="header-content">
             <h1>DBCP</h1>
             <p>Data Buoy Cooperation Panel</p>
@@ -86,37 +86,31 @@
   
   
   <!-- Hero Section -->
-  <section 
-    class="hero" 
-    style="background-image: url('figures/headbanner02.png'); 
-           height: 600px; 
-           background-size: cover; 
-           background-repeat: no-repeat;
-           background-position: center;">
- 
-    <div class="container">
-    <div class="hero-content">
-
-    <!-- Title should be divided into three lines. Each line max 40 characters (including space)-->
-    <!-- If no more than one or two lines, the second and third line should still be there with blank spaces.-->
-
-<!--    |------------This long only max-----------|       -->
-    <h1>Connecting you to the ocean: </h1>
-    <h1>Fast, reliable, and open access to buoy data</h1>
-    
-      
-      <div class="hero-logos">
-        <a href="https://www.wmo.int" target="_blank">
-          <img src="figures/wmologo2016_acronym_vertical_cmyk_en.png" alt="Logo 2" class="logo">
-        </a>
-        <a href="https://www.ioc.unesco.org/en" target="_blank">
-          <img src="figures/IOC-UNESCO-Logo_final.png" alt="Logo 3" class="logo">
-        </a>
-        <a href="https://goosocean.org" target="_blank">
-          <img src="figures/GOOS_logo_new.png" alt="Logo 4" class="logo">
+  <section class="hero">
+    <div class="hero-container" 
+      style="background-image: url('figures/headbanner02.png');">
+      <div class="hero-column-left">
+        <a href="index.html">
+          <img src="figures/favicon.png" alt="DBCP Logo" style="max-width: 120px;">
         </a>
       </div>
+      <div class="hero-column-mid">
+        <div class="hero-content">
+          <h1>Connecting You to the Ocean: Fast, Reliable, and Open Access to Buoy Data</h1>
+        </div>
+        <div class="hero-logos">
+          <a href="https://www.wmo.int" target="_blank">
+            <img src="figures/wmologo2016_acronym_vertical_cmyk_en.png" alt="Logo 2" class="logo">
+          </a>
+          <a href="https://www.ioc.unesco.org/en" target="_blank">
+            <img src="figures/IOC-UNESCO-Logo_final.png" alt="Logo 3" class="logo" style="max-height: 70px;">
+          </a>
+          <a href="https://goosocean.org" target="_blank">
+            <img src="figures/GOOS_logo_new.png" alt="Logo 4" class="logo">
+          </a>
+        </div>
       </div>
+      <div class="hero-column-right"></div>
     </div>
   </section>
 
